fixat button komponenten och lagt till root värden för dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 #root {
+  background-color: var(--color-bg);
   text-align: center;
 }
 
 html, body, #root {
   height: 100vh;
+  margin: 0;
 }
