--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -40,5 +40,5 @@ li.active {
 /*Den vägrade centrera sig med bara .icon*/
 .icon svg {
   transform: translateY(2px);
-  color: var(--color-accent);
+  color: var(--color-primary);
 }
